<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rebet_mirte</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="EGAlberts@github.com">ega</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>behaviortree_cpp</depend>
  <depend>behaviortree_ros2</depend>
  <depend>rebet_msgs</depend>
  <depend>darknet_ros_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>slam_toolbox</depend>
  <depend>ultralytics</depend>
  <depend>aal_msgs</depend>
  <depend>aal</depend>  
  <depend>rebet</depend>



  
  
  
  <exec_depend>masced-bandits</exec_depend>
  <exec_depend>masced_bandits</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>rebet_msgs</test_depend>
  <test_depend>aal</test_depend>
  <test_depend>btcpp_ros2_interfaces</test_depend>


  

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  
</package>
